# EventHandler

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Event.h  README.md  compile.bat  main.cpp
event_src/: listener_src.cpp
lib/high_resolution_timer/: timer.h
lib/mingw-std-threads-master/: mingw.condition_variable.h  mingw.thread.h
src/: event_handler_src.cpp  listener_src.cpp
